minitrace-macro/tests/ui/err/has-enter-on-poll-and-sync.rs
use minitrace::trace;

#[trace(enter_on_poll = true)]
fn f() {}

fn main() {}
